Parser.output
   0  $accept : %entry% $end

   1  Prog : Defs ARROW Defs WITH Defs SEMICOLON Stat Procs EOF
   2       | Defs ARROW Defs SEMICOLON Stat Procs EOF

   3  Defs : ID Defs
   4       |

   5  Procs : PROCEDURE ID Stat Procs
   6        |

   7  Stat : Stat SEMICOLON Stat
   8       | Lval ADD Exp
   9       | Lval SUBTRACT Exp
  10       | SKIP
  11       | CALL ID

  12  Exp : NUM
  13      | Lval
  14      | Exp PLUS Exp
  15      | Exp MINUS Exp
  16      | Exp HALF
  17      | LPAR Exp RPAR

  18  Lval : ID

  19  %entry% : '\001' Prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Prog  (19)
	Defs : .  (4)

	ID  shift 3
	ARROW  reduce 4

	Prog  goto 4
	Defs  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Defs : ID . Defs  (3)
	Defs : .  (4)

	ID  shift 3
	ARROW  reduce 4
	SEMICOLON  reduce 4
	WITH  reduce 4

	Defs  goto 6


state 4
	%entry% : '\001' Prog .  (19)

	.  reduce 19


state 5
	Prog : Defs . ARROW Defs WITH Defs SEMICOLON Stat Procs EOF  (1)
	Prog : Defs . ARROW Defs SEMICOLON Stat Procs EOF  (2)

	ARROW  shift 7
	.  error


state 6
	Defs : ID Defs .  (3)

	.  reduce 3


state 7
	Prog : Defs ARROW . Defs WITH Defs SEMICOLON Stat Procs EOF  (1)
	Prog : Defs ARROW . Defs SEMICOLON Stat Procs EOF  (2)
	Defs : .  (4)

	ID  shift 3
	SEMICOLON  reduce 4
	WITH  reduce 4

	Defs  goto 8


state 8
	Prog : Defs ARROW Defs . WITH Defs SEMICOLON Stat Procs EOF  (1)
	Prog : Defs ARROW Defs . SEMICOLON Stat Procs EOF  (2)

	SEMICOLON  shift 9
	WITH  shift 10
	.  error


state 9
	Prog : Defs ARROW Defs SEMICOLON . Stat Procs EOF  (2)

	CALL  shift 11
	ID  shift 12
	SKIP  shift 13
	.  error

	Stat  goto 14
	Lval  goto 15


state 10
	Prog : Defs ARROW Defs WITH . Defs SEMICOLON Stat Procs EOF  (1)
	Defs : .  (4)

	ID  shift 3
	SEMICOLON  reduce 4

	Defs  goto 16


state 11
	Stat : CALL . ID  (11)

	ID  shift 17
	.  error


state 12
	Lval : ID .  (18)

	.  reduce 18


state 13
	Stat : SKIP .  (10)

	.  reduce 10


state 14
	Prog : Defs ARROW Defs SEMICOLON Stat . Procs EOF  (2)
	Stat : Stat . SEMICOLON Stat  (7)
	Procs : .  (6)

	PROCEDURE  shift 18
	SEMICOLON  shift 19
	EOF  reduce 6

	Procs  goto 20


state 15
	Stat : Lval . ADD Exp  (8)
	Stat : Lval . SUBTRACT Exp  (9)

	ADD  shift 21
	SUBTRACT  shift 22
	.  error


state 16
	Prog : Defs ARROW Defs WITH Defs . SEMICOLON Stat Procs EOF  (1)

	SEMICOLON  shift 23
	.  error


state 17
	Stat : CALL ID .  (11)

	.  reduce 11


state 18
	Procs : PROCEDURE . ID Stat Procs  (5)

	ID  shift 24
	.  error


state 19
	Stat : Stat SEMICOLON . Stat  (7)

	CALL  shift 11
	ID  shift 12
	SKIP  shift 13
	.  error

	Stat  goto 25
	Lval  goto 15


state 20
	Prog : Defs ARROW Defs SEMICOLON Stat Procs . EOF  (2)

	EOF  shift 26
	.  error


state 21
	Stat : Lval ADD . Exp  (8)

	ID  shift 12
	LPAR  shift 27
	NUM  shift 28
	.  error

	Exp  goto 29
	Lval  goto 30


state 22
	Stat : Lval SUBTRACT . Exp  (9)

	ID  shift 12
	LPAR  shift 27
	NUM  shift 28
	.  error

	Exp  goto 31
	Lval  goto 30


state 23
	Prog : Defs ARROW Defs WITH Defs SEMICOLON . Stat Procs EOF  (1)

	CALL  shift 11
	ID  shift 12
	SKIP  shift 13
	.  error

	Stat  goto 32
	Lval  goto 15


state 24
	Procs : PROCEDURE ID . Stat Procs  (5)

	CALL  shift 11
	ID  shift 12
	SKIP  shift 13
	.  error

	Stat  goto 33
	Lval  goto 15


state 25
	Stat : Stat . SEMICOLON Stat  (7)
	Stat : Stat SEMICOLON Stat .  (7)

	SEMICOLON  shift 19
	EOF  reduce 7
	PROCEDURE  reduce 7


state 26
	Prog : Defs ARROW Defs SEMICOLON Stat Procs EOF .  (2)

	.  reduce 2


state 27
	Exp : LPAR . Exp RPAR  (17)

	ID  shift 12
	LPAR  shift 27
	NUM  shift 28
	.  error

	Exp  goto 34
	Lval  goto 30


state 28
	Exp : NUM .  (12)

	.  reduce 12


state 29
	Stat : Lval ADD Exp .  (8)
	Exp : Exp . PLUS Exp  (14)
	Exp : Exp . MINUS Exp  (15)
	Exp : Exp . HALF  (16)

	HALF  shift 35
	MINUS  shift 36
	PLUS  shift 37
	EOF  reduce 8
	PROCEDURE  reduce 8
	SEMICOLON  reduce 8


state 30
	Exp : Lval .  (13)

	.  reduce 13


state 31
	Stat : Lval SUBTRACT Exp .  (9)
	Exp : Exp . PLUS Exp  (14)
	Exp : Exp . MINUS Exp  (15)
	Exp : Exp . HALF  (16)

	HALF  shift 35
	MINUS  shift 36
	PLUS  shift 37
	EOF  reduce 9
	PROCEDURE  reduce 9
	SEMICOLON  reduce 9


state 32
	Prog : Defs ARROW Defs WITH Defs SEMICOLON Stat . Procs EOF  (1)
	Stat : Stat . SEMICOLON Stat  (7)
	Procs : .  (6)

	PROCEDURE  shift 18
	SEMICOLON  shift 19
	EOF  reduce 6

	Procs  goto 38


state 33
	Procs : PROCEDURE ID Stat . Procs  (5)
	Stat : Stat . SEMICOLON Stat  (7)
	Procs : .  (6)

	PROCEDURE  shift 18
	SEMICOLON  shift 19
	EOF  reduce 6

	Procs  goto 39


state 34
	Exp : Exp . PLUS Exp  (14)
	Exp : Exp . MINUS Exp  (15)
	Exp : Exp . HALF  (16)
	Exp : LPAR Exp . RPAR  (17)

	HALF  shift 35
	MINUS  shift 36
	PLUS  shift 37
	RPAR  shift 40
	.  error


state 35
	Exp : Exp HALF .  (16)

	.  reduce 16


state 36
	Exp : Exp MINUS . Exp  (15)

	ID  shift 12
	LPAR  shift 27
	NUM  shift 28
	.  error

	Exp  goto 41
	Lval  goto 30


state 37
	Exp : Exp PLUS . Exp  (14)

	ID  shift 12
	LPAR  shift 27
	NUM  shift 28
	.  error

	Exp  goto 42
	Lval  goto 30


state 38
	Prog : Defs ARROW Defs WITH Defs SEMICOLON Stat Procs . EOF  (1)

	EOF  shift 43
	.  error


state 39
	Procs : PROCEDURE ID Stat Procs .  (5)

	.  reduce 5


state 40
	Exp : LPAR Exp RPAR .  (17)

	.  reduce 17


state 41
	Exp : Exp . PLUS Exp  (14)
	Exp : Exp . MINUS Exp  (15)
	Exp : Exp MINUS Exp .  (15)
	Exp : Exp . HALF  (16)

	HALF  shift 35
	EOF  reduce 15
	MINUS  reduce 15
	PLUS  reduce 15
	PROCEDURE  reduce 15
	RPAR  reduce 15
	SEMICOLON  reduce 15


state 42
	Exp : Exp . PLUS Exp  (14)
	Exp : Exp PLUS Exp .  (14)
	Exp : Exp . MINUS Exp  (15)
	Exp : Exp . HALF  (16)

	HALF  shift 35
	EOF  reduce 14
	MINUS  reduce 14
	PLUS  reduce 14
	PROCEDURE  reduce 14
	RPAR  reduce 14
	SEMICOLON  reduce 14


state 43
	Prog : Defs ARROW Defs WITH Defs SEMICOLON Stat Procs EOF .  (1)

	.  reduce 1


24 terminals, 8 nonterminals
20 grammar rules, 44 states
